finalizing minimal code

--- a/RickAndMorty.WebAPI/RickAndMorty.WebAPI.csproj
+++ b/RickAndMorty.WebAPI/RickAndMorty.WebAPI.csproj
@@ -7,7 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="SQLitePCLRaw.bundle_e_sqlite3" Version="2.1.11" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\RickMorty.Data\RickMorty.Data.csproj" />
   </ItemGroup>
 
 </Project>
